--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 <div id="app"></div>
-<h1>hi</h1>
+
 <script src="bundle.js" charset="utf-8"></script>
 </body>
 </html>
